update refs for conclusion

--- a/src/data/reality.html
+++ b/src/data/reality.html
@@ -1,7 +1,7 @@
 <div class="csl-bib-body">
-  <div data-csl-entry-id="temp_id_2620326714136485" class="csl-entry">Baudrillard, J. (1988). <i>Jean Baudrillard: Selected Writings: Second Edition</i> (pp. 166–184). Stanford University Press. http://www.sup.org/books/title/?id=1827</div>
-  <div data-csl-entry-id="temp_id_6931299669436204" class="csl-entry">Chalmers, D. J. (2022). <i>Reality+: Virtual Worlds and the Problems of Philosophy</i>. W. W. Norton.</div>
-  <div data-csl-entry-id="temp_id_8644549275109239" class="csl-entry">Eyer, S. (2009). Translation from Platos Republic 514b-518d (“Allegory of the Cave”). <i>Ahiman: A Review of Masonic Culture and Tradition</i>, <i>1</i>, 73–78.</div>
-  <div data-csl-entry-id="temp_id_9121009481559346" class="csl-entry">Maçães, B. (2022). Living in an immaterial world. In <i>The New Statesman</i>. https://www.newstatesman.com/culture/books/2022/02/living-in-an-immaterial-world</div>
-  <div data-csl-entry-id="temp_id_7627291304490691" class="csl-entry">Rospigliosi, P. ‘asher.’ (2022). Metaverse or Simulacra? Roblox, Minecraft, Meta and the turn to virtual reality for education, socialisation and work. <i>Interactive Learning Environments</i>, <i>30</i>(1), 1–3. https://doi.org/10.1080/10494820.2022.2022899</div>
+  <div data-csl-entry-id="temp_id_625463427417013" class="csl-entry">Baudrillard, J. (1988). <i>Jean Baudrillard: Selected Writings: Second Edition</i> (pp. 166–184). Stanford University Press. http://www.sup.org/books/title/?id=1827</div>
+  <div data-csl-entry-id="temp_id_433944910717349" class="csl-entry">Chalmers, D. J. (2022). <i>Reality+: Virtual Worlds and the Problems of Philosophy</i>. W. W. Norton.</div>
+  <div data-csl-entry-id="temp_id_3429887004001184" class="csl-entry">Eyer, S. (2009). Translation from Platos Republic 514b-518d (“Allegory of the Cave”). <i>Ahiman: A Review of Masonic Culture and Tradition</i>, <i>1</i>, 73–78.</div>
+  <div data-csl-entry-id="temp_id_97399193200649" class="csl-entry">Maçães, B. (2022). Living in an immaterial world. In <i>The New Statesman</i>. https://www.newstatesman.com/culture/books/2022/02/living-in-an-immaterial-world</div>
+  <div data-csl-entry-id="temp_id_45746640012203055" class="csl-entry">Rospigliosi, P. ‘asher.’ (2022). Metaverse or Simulacra? Roblox, Minecraft, Meta and the turn to virtual reality for education, socialisation and work. <i>Interactive Learning Environments</i>, <i>30</i>(1), 1–3. https://doi.org/10.1080/10494820.2022.2022899</div>
 </div>
